deployment/production/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oscar-deployment
spec:
  selector:
    matchLabels:
      app: oscar  
  template:
    spec:
      containers:
        - name: oscar
          imagePullPolicy: Always
          image: quay.io/cloudflavor/oscar:untagged
          ports:
            - containerPort: 8111
              name: http-port
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
